feat: add create account grpc service and grpc gateway service also add pattern to the project
