# gapi/converter.go
@@ -2,7 +2,8 @@ package gapi
 
 import (
 	db "github.com/auronvila/simple-bank/db/sqlc"
-	"github.com/auronvila/simple-bank/pb"
+	acPb "github.com/auronvila/simple-bank/pb/account"
+	pb "github.com/auronvila/simple-bank/pb/user"
 	"google.golang.org/protobuf/types/known/timestamppb"
 )
 
@@ -13,5 +14,16 @@ func convertUser(user db.User) *pb.User {
 		Email:             user.Email,
 		PasswordChangedAt: timestamppb.New(user.PasswordChangedAt),
 		CreatedAt:         timestamppb.New(user.CreatedAt),
+	}
+}
+
+func convertAccount(account db.Account) *acPb.CreateAccountResponse {
+	return &acPb.CreateAccountResponse{
+		Account: &acPb.Account{
+			Id:        account.ID,
+			Username:  account.Owner,
+			Currency:  account.Currency,
+			CreatedAt: timestamppb.New(account.CreatedAt),
+		},
 	}
 }
