# gapi/rpc_update_user.go
@@ -5,7 +5,7 @@ import (
 	"database/sql"
 	"errors"
 	db "github.com/auronvila/simple-bank/db/sqlc"
-	"github.com/auronvila/simple-bank/pb"
+	pb "github.com/auronvila/simple-bank/pb/user"
 	"github.com/auronvila/simple-bank/util"
 	"github.com/auronvila/simple-bank/val"
 	"google.golang.org/genproto/googleapis/rpc/errdetails"
